try to fix wrapping on description

--- a/src/app/shared/user-card/user-card.component.css
+++ b/src/app/shared/user-card/user-card.component.css
@@ -42,7 +42,7 @@ mat-accordion {
 .audit-trail-panel ::ng-deep .mat-expansion-panel-header-description {
   flex: 0 0 auto;
   margin: 0 8px 0 0;
-  white-space: nowrap;
+  white-space: normal;
 }
 
 .audit-title {
